kubernetes/orleans/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketapi
  labels:
    app: ticketapi
spec:
  selector:
    app: ticketapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
