kubernetes/orleans/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketweb
  labels:
    app: ticketweb
spec:
  selector:
    app: ticketweb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
