kubernetes/orleans/base/api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ticketapi
  labels:
    app: ticketapi
spec:
  rules:
  - host: ticketapi.localtest.me
    http:
      paths:
      - backend:
          serviceName: ticketapi
          servicePort: 80
