kubernetes/orleans/base/silo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ticketsilo-dashboard
  labels:
    app: ticketsilo-dashboard
spec:
  rules:
  - host: dashboard.localtest.me
    http:
      paths:
      - backend:
          serviceName: ticketsilo-dashboard
          servicePort: 80
