kubernetes/orleans/base/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ticketweb
  labels:
    app: ticketweb
spec:
  rules:
  - host: ticketweb.localtest.me
    http:
      paths:
      - backend:
          serviceName: ticketweb
          servicePort: 80
